[tool.poetry]
name = "python-tooling-sandbox"
version = "0.0.1"
description = ""
authors = ["Luc Ritchie <luc.ritchie@gmail.com>"]
license = "MIT"
packages = [
    { include = "sandbox" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
autoflake = "1.7.7"
black = "22.10.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
flake8 = "5.0.4"
flake8-bugbear = "22.10.27"
isort = "5.10.1"
mypy = "0.991"
pre-commit = "2.20.0"
pyright = "1.1.280"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove-all-unused-imports = true

[tool.black]
skip-string-normalization = "True"

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
